Fix blur on mobile devices (#3)

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -27,6 +27,7 @@
     var(--green2),
     var(--green7) 80%
   );
+  --vp-home-hero-image-filter: blur(40px);
 }
 
 @media (min-width: 640px) {
